post-LEGA: SID2 and 23 debug

--- a/JUICE-CDF-HF-SID23_sample.ipynb
+++ b/JUICE-CDF-HF-SID23_sample.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "bca50671",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,9 @@
     "import matplotlib.colors as colors\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import sys"
+    "import sys\n",
+    "\n",
+    "from matplotlib import gridspec"
    ]
   },
   {
@@ -43,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6c181f65",
    "metadata": {},
    "outputs": [],
@@ -81,8 +83,8 @@
     "# *** Plot dump ***\n",
     "dump_mode = 0                           # 0: no-dump  1:plot dump\n",
     "# *** CAL set ***\n",
-    "unit_mode = 2                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
-    "band_mode = 0                           # [Power]     0: sum     1: /Hz\n",
+    "unit_mode = 4                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
+    "band_mode = 1                           # [Power]     0: sum     1: /Hz\n",
     "cal_mode  = 2                           # [Power]   0: background   1: CAL     2: all\n",
     "# *** Unit set ***\n",
     "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
@@ -471,9 +473,9 @@
    "outputs": [],
    "source": [
     "print(\"decimation:\", juice_cdf._sample_rate(data.decimation[0]))\n",
-    "print(\"Peak Eu:\", '{:.2e} V'.format(np.amax(wave.Eu_i)), ' {:.2e} V'.format(np.amax(wave.Eu_q)))\n",
-    "print(\"Peak Ev:\", '{:.2e} V'.format(np.amax(wave.Ev_i)), ' {:.2e} V'.format(np.amax(wave.Ev_q)))\n",
-    "print(\"Peak Ew:\", '{:.2e} V'.format(np.amax(wave.Ew_i)), ' {:.2e} V'.format(np.amax(wave.Ew_q)))"
+    "print(\"Peak Eu:\", '{:.2e}'.format(np.amax(wave.Eu_i)), ' {:.2e}'.format(np.amax(wave.Eu_q)), wave.str)\n",
+    "print(\"Peak Ev:\", '{:.2e}'.format(np.amax(wave.Ev_i)), ' {:.2e}'.format(np.amax(wave.Ev_q)), wave.str)\n",
+    "print(\"Peak Ew:\", '{:.2e}'.format(np.amax(wave.Ew_i)), ' {:.2e}'.format(np.amax(wave.Ew_q)), wave.str)"
    ]
   },
   {
@@ -529,7 +531,6 @@
    "outputs": [],
    "source": [
     "n_sweep = np.int16(n_time0/2)\n",
-    "# n_sweep = n_time0-4\n",
     "n_block = n_block0\n",
     "print(\"[specific sweep]  SWEEP:\", n_sweep, \"in total of\", n_time0, \"   Block:\", n_block, \"in total of\", data.N_block[0])\n",
     "\n",
@@ -615,9 +616,9 @@
     "\n",
     "fig = plt.figure(figsize=(14, 11));  ax1 = fig.add_subplot(1, 1, 1)\n",
     "\n",
-    "wave.EE = wave.Eu_i*wave.Eu_i + wave.Eu_q*wave.Eu_q + wave.Ev_i*wave.Ev_i + wave.Ev_q*wave.Ev_q + wave.Ew_i*wave.Ew_i + wave.Ew_q*wave.Ew_q\n",
+    "wave.EE = wave.Eu_i*wave.Eu_i + wave.Eu_q*wave.Eu_q # + wave.Ev_i*wave.Ev_i + wave.Ev_q*wave.Ev_q + wave.Ew_i*wave.Ew_i + wave.Ew_q*wave.Ew_q\n",
     "ax1.plot(data.time[n_sweep][n_block], wave.EE[n_sweep][n_block], '-b', linewidth=.5, label='EE')\n",
-    "ax1.set_ylabel('EE '+wave.str)\n",
+    "ax1.set_ylabel('EE')\n",
     "title_label = '[JUICE/RPWI HF PSSR3-Rich (SID-23)]  ' + data_name + \"  [\" + date1 + \"]\";  ax1.set_title(title_label)\n",
     "ax1.legend(loc='upper right', fontsize=8)\n",
     "ax1.set_yscale('log')\n",
@@ -635,27 +636,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f853b252",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"N_samp:\", data.N_samp[0], \"   decimation:\", juice_cdf._sample_rate(data.decimation[0])) \n",
-    "peak_E = np.ravel(wave.Eu_i[:][:]); peak_f = np.argmax(peak_E); print(\"Peak Eu_i:\", '{:.2e}'.format(peak_E[peak_f]))\n",
-    "peak_E = np.ravel(wave.Ev_i[:][:]); peak_f = np.argmax(peak_E); print(\"Peak Ev_i:\", '{:.2e}'.format(peak_E[peak_f]))\n",
-    "peak_E = np.ravel(wave.Ew_i[:][:]); peak_f = np.argmax(peak_E); print(\"Peak Ew_i:\", '{:.2e}'.format(peak_E[peak_f]))\n",
-    "peak_E = np.ravel(wave.Eu_q[:][:]); peak_f = np.argmax(peak_E); print(\"Peak Eu_q:\", '{:.2e}'.format(peak_E[peak_f]))\n",
-    "peak_E = np.ravel(wave.Ev_q[:][:]); peak_f = np.argmax(peak_E); print(\"Peak Ev_q:\", '{:.2e}'.format(peak_E[peak_f]))\n",
-    "peak_E = np.ravel(wave.Ew_q[:][:]); peak_f = np.argmax(peak_E); print(\"Peak Ew_q:\", '{:.2e}'.format(peak_E[peak_f]))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "a2b60696",
    "metadata": {},
    "source": [
-    "# Get Spectrum"
+    "# Spectrum Data"
    ]
   },
   {
@@ -721,6 +706,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd0e5a09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Peak   Eu:\", '{:.2e}'.format(np.amax(wave.Eu_i)), ' {:.2e}'.format(np.amax(wave.Eu_q)), wave.str)\n",
+    "print(\"Peak   Ev:\", '{:.2e}'.format(np.amax(wave.Ev_i)), ' {:.2e}'.format(np.amax(wave.Ev_q)), wave.str)\n",
+    "print(\"Peak   Ew:\", '{:.2e}'.format(np.amax(wave.Ew_i)), ' {:.2e}'.format(np.amax(wave.Ew_q)), wave.str)\n",
+    "peak_E = np.ravel(spec.EuEu[:][:]); peak_f = np.argmax(peak_E); print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, '  |  {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])), spec.str, ' {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])**.5), wave.str)\n",
+    "peak_E = np.ravel(spec.EvEv[:][:]); peak_f = np.argmax(peak_E); print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, '  |  {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])), spec.str, ' {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])**.5), wave.str)\n",
+    "peak_E = np.ravel(spec.EwEw[:][:]); peak_f = np.argmax(peak_E); print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, '  |  {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])), spec.str, ' {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])**.5), wave.str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "256afe5e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_sweep1 = 0;  n_sweep2 = n_time0//2;  n_sweep3 = n_time0-1\n",
+    "print(f\"[First peak - {n_sweep1}]\");  freq_1d = spec.freq[n_sweep1][0]\n",
+    "peak_E = np.ravel(spec.EuEu[n_sweep1]); peak_f = np.argmax(peak_E); print(\"EuEu:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, ' {:.1f} kHz'.format(freq_1d[peak_f%freq_1d.shape[0]]))\n",
+    "peak_E = np.ravel(spec.EvEv[n_sweep1]); peak_f = np.argmax(peak_E); print(\"EvEv:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, ' {:.1f} kHz'.format(freq_1d[peak_f%freq_1d.shape[0]]))\n",
+    "peak_E = np.ravel(spec.EwEw[n_sweep1]); peak_f = np.argmax(peak_E); print(\"EwEw:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, ' {:.1f} kHz'.format(freq_1d[peak_f%freq_1d.shape[0]]))\n",
+    "print(f\"[Mid   peak - {n_sweep2}]\");  freq_1d = spec.freq[n_sweep2][0]\n",
+    "peak_E = np.ravel(spec.EuEu[n_sweep2]); peak_f = np.argmax(peak_E); print(\"EuEu:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, ' {:.1f} kHz'.format(freq_1d[peak_f%freq_1d.shape[0]]))\n",
+    "peak_E = np.ravel(spec.EvEv[n_sweep2]); peak_f = np.argmax(peak_E); print(\"EvEv:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, ' {:.1f} kHz'.format(freq_1d[peak_f%freq_1d.shape[0]]))\n",
+    "peak_E = np.ravel(spec.EwEw[n_sweep2]); peak_f = np.argmax(peak_E); print(\"EwEw:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, ' {:.1f} kHz'.format(freq_1d[peak_f%freq_1d.shape[0]]))\n",
+    "print(f\"[Last  peak - {n_sweep3}]\");  freq_1d = spec.freq[n_sweep3][0]\n",
+    "peak_E = np.ravel(spec.EuEu[n_sweep3]); peak_f = np.argmax(peak_E); print(\"EuEu:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, ' {:.1f} kHz'.format(freq_1d[peak_f%freq_1d.shape[0]]))\n",
+    "peak_E = np.ravel(spec.EvEv[n_sweep3]); peak_f = np.argmax(peak_E); print(\"EvEv:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, ' {:.1f} kHz'.format(freq_1d[peak_f%freq_1d.shape[0]]))\n",
+    "peak_E = np.ravel(spec.EwEw[n_sweep3]); peak_f = np.argmax(peak_E); print(\"EwEw:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, ' {:.1f} kHz'.format(freq_1d[peak_f%freq_1d.shape[0]]))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "fc5e1a7b",
    "metadata": {},
@@ -767,13 +789,13 @@
     "    fig.savefig(png_fname)\n",
     "\n",
     "peak_E = np.ravel(spec.EE  [n_sweep][0]); peak_f = np.argmax(peak_E)\n",
-    "print(\"Peak EE  :\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(spec.freq[n_sweep][0][peak_f]), \"kHz\")\n",
+    "print(\"Peak EE  :\", '{:.2e}'.format(peak_E[peak_f]), spec.str, \" at\", '{:.1f}'.format(spec.freq[n_sweep][0][peak_f]), \"kHz\")\n",
     "peak_E = np.ravel(spec.EuEu[n_sweep][0]); peak_f = np.argmax(peak_E)\n",
-    "print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(spec.freq[n_sweep][0][peak_f]), \"kHz\")\n",
+    "print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, \" at\", '{:.1f}'.format(spec.freq[n_sweep][0][peak_f]), \"kHz\")\n",
     "peak_E = np.ravel(spec.EvEv[n_sweep][0]); peak_f = np.argmax(peak_E)\n",
-    "print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(spec.freq[n_sweep][0][peak_f]), \"kHz\")\n",
+    "print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, \" at\", '{:.1f}'.format(spec.freq[n_sweep][0][peak_f]), \"kHz\")\n",
     "peak_E = np.ravel(spec.EwEw[n_sweep][0]); peak_f = np.argmax(peak_E)\n",
-    "print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(spec.freq[n_sweep][0][peak_f]), \"kHz\")"
+    "print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, \" at\", '{:.1f}'.format(spec.freq[n_sweep][0][peak_f]), \"kHz\")"
    ]
   },
   {
@@ -820,15 +842,14 @@
     "    png_fname = work_dir+data_name+'_spec-mid.png'\n",
     "    fig.savefig(png_fname)\n",
     "\n",
-    "# Peak\n",
     "peak_E = np.ravel(spec.EE  [n_sweep][0]); peak_f = np.argmax(peak_E)\n",
-    "print(\"Peak EE  :\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(spec.freq[n_sweep][0][peak_f]), \"kHz\")\n",
+    "print(\"Peak EE  :\", '{:.2e}'.format(peak_E[peak_f]), spec.str, \" at\", '{:.1f}'.format(spec.freq[n_sweep][0][peak_f]), \"kHz\")\n",
     "peak_E = np.ravel(spec.EuEu[n_sweep][0]); peak_f = np.argmax(peak_E)\n",
-    "print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(spec.freq[n_sweep][0][peak_f]), \"kHz\")\n",
+    "print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, \" at\", '{:.1f}'.format(spec.freq[n_sweep][0][peak_f]), \"kHz\")\n",
     "peak_E = np.ravel(spec.EvEv[n_sweep][0]); peak_f = np.argmax(peak_E)\n",
-    "print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(spec.freq[n_sweep][0][peak_f]), \"kHz\")\n",
+    "print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, \" at\", '{:.1f}'.format(spec.freq[n_sweep][0][peak_f]), \"kHz\")\n",
     "peak_E = np.ravel(spec.EwEw[n_sweep][0]); peak_f = np.argmax(peak_E)\n",
-    "print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(spec.freq[n_sweep][0][peak_f]), \"kHz\")"
+    "print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, \" at\", '{:.1f}'.format(spec.freq[n_sweep][0][peak_f]), \"kHz\")"
    ]
   },
   {
@@ -878,13 +899,13 @@
     "\n",
     "# Peak\n",
     "peak_E = np.ravel(spec.EE  [n_sweep][0]); peak_f = np.argmax(peak_E)\n",
-    "print(\"Peak EE  :\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(spec.freq[n_sweep][0][peak_f]), \"kHz\")\n",
+    "print(\"Peak EE  :\", '{:.2e}'.format(peak_E[peak_f]), spec.str, \" at\", '{:.1f}'.format(spec.freq[n_sweep][0][peak_f]), \"kHz\")\n",
     "peak_E = np.ravel(spec.EuEu[n_sweep][0]); peak_f = np.argmax(peak_E)\n",
-    "print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(spec.freq[n_sweep][0][peak_f]), \"kHz\")\n",
+    "print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, \" at\", '{:.1f}'.format(spec.freq[n_sweep][0][peak_f]), \"kHz\")\n",
     "peak_E = np.ravel(spec.EvEv[n_sweep][0]); peak_f = np.argmax(peak_E)\n",
-    "print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(spec.freq[n_sweep][0][peak_f]), \"kHz\")\n",
+    "print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, \" at\", '{:.1f}'.format(spec.freq[n_sweep][0][peak_f]), \"kHz\")\n",
     "peak_E = np.ravel(spec.EwEw[n_sweep][0]); peak_f = np.argmax(peak_E)\n",
-    "print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(spec.freq[n_sweep][0][peak_f]), \"kHz\")"
+    "print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, \" at\", '{:.1f}'.format(spec.freq[n_sweep][0][peak_f]), \"kHz\")"
    ]
   },
   {
@@ -913,8 +934,9 @@
     "EwEw_2d = np.ravel(spec.EwEw); EwEw_2d = EwEw_2d.reshape(n_num, n_length0).transpose()\n",
     "num_1d = np.arange(n_num)\n",
     "\n",
-    "fig2d = plt.figure(figsize=[16,11])\n",
-    "ax1 = fig2d.add_subplot(4, 1, 1);  ax2 = fig2d.add_subplot(4, 1, 2); ax3 = fig2d.add_subplot(4, 1, 3); ax4 = fig2d.add_subplot(4, 1, 4)\n",
+    "fig2d = plt.figure(figsize=[16,11]);  \n",
+    "gs = gridspec.GridSpec(4,1, height_ratios=[1,1,1,.5]) \n",
+    "ax1 = fig2d.add_subplot(gs[0]);  ax2 = fig2d.add_subplot(gs[1]); ax3 = fig2d.add_subplot(gs[2]); ax4 = fig2d.add_subplot(gs[3])\n",
     "ax1.set_ylim(f_min, f_max);    ax2.set_ylim(f_min, f_max);    ax3.set_ylim(f_min, f_max)\n",
     "ax1.set_ylabel('EuEu [kHz]');  ax2.set_ylabel('EvEv [kHz]');  ax3.set_ylabel('EwEw [kHz]')\n",
     "ax1.set_title(\"[\" + data_name + \"]\");                         ax3.set_xlabel(str_date)\n",
@@ -928,11 +950,12 @@
     "p2 = ax2.pcolormesh(num_1d, freq_1d, EvEv_2d[:], norm=colors.LogNorm(vmin=10**p_min, vmax=10**p_max), cmap='jet')\n",
     "p3 = ax3.pcolormesh(num_1d, freq_1d, EwEw_2d[:], norm=colors.LogNorm(vmin=10**p_min, vmax=10**p_max), cmap='jet')\n",
     "p4 = ax4.plot(np.ravel(data.epoch[:]), '.')\n",
-    "\n",
     "pp1 = fig2d.colorbar(p1, ax=ax1, orientation=\"vertical\"); pp1.set_label(spec.str)\n",
     "pp2 = fig2d.colorbar(p2, ax=ax2, orientation=\"vertical\"); pp2.set_label(spec.str)\n",
     "pp3 = fig2d.colorbar(p3, ax=ax3, orientation=\"vertical\"); pp3.set_label(spec.str)\n",
     "pp4 = fig2d.colorbar(p3, ax=ax4, orientation=\"vertical\"); pp4.set_label(spec.str)\n",
+    "\n",
+    "xlim=[-.5, len(np.ravel(data.epoch))-.5];  print(xlim);  ax4.set_xlim(xlim)\n",
     "\n",
     "plt.subplots_adjust(hspace=0.02);  plt.show\n",
     "if dump_mode == 1:\n",
@@ -1117,7 +1140,6 @@
    "outputs": [],
    "source": [
     "n_sweep = np.int16(n_time0//2)\n",
-    "n_sweep = np.int16(3*n_time0//5+1)\n",
     "print(\"[mid]  SWEEP:\", n_num0, \"in total of\", n_time0)\n",
     "\n",
     "fig = plt.figure(figsize=(14, 11))\n",
