--- a/JUICE-CDF-HF-SID2_sp_mask.ipynb
+++ b/JUICE-CDF-HF-SID2_sp_mask.ipynb
@@ -231,9 +231,9 @@
    "outputs": [],
    "source": [
     "print(\"decimation:\", juice_cdf._sample_rate(data.decimation[0]))\n",
-    "print(\"Peak Eu:\", '{:.2e} V'.format(np.amax(wave.Eu_i)), ' {:.2e} V'.format(np.amax(wave.Eu_q)))\n",
-    "print(\"Peak Ev:\", '{:.2e} V'.format(np.amax(wave.Ev_i)), ' {:.2e} V'.format(np.amax(wave.Ev_q)))\n",
-    "print(\"Peak Ew:\", '{:.2e} V'.format(np.amax(wave.Ew_i)), ' {:.2e} V'.format(np.amax(wave.Ew_q)))"
+    "print(\"Peak Eu:\", '{:.2e}'.format(np.amax(wave.Eu_i)), ' {:.2e}'.format(np.amax(wave.Eu_q)), wave.str)\n",
+    "print(\"Peak Ev:\", '{:.2e}'.format(np.amax(wave.Ev_i)), ' {:.2e}'.format(np.amax(wave.Ev_q)), wave.str)\n",
+    "print(\"Peak Ew:\", '{:.2e}'.format(np.amax(wave.Ew_i)), ' {:.2e}'.format(np.amax(wave.Ew_q)), wave.str)"
    ]
   },
   {
