post LEGA: SID-3 debug with others

--- a/JUICE-CDF-HF-SID2_sample.ipynb
+++ b/JUICE-CDF-HF-SID2_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID2 (RAW): L1a QL -- 2024/8/27"
+    "# JUICE RPWI HF SID2 (RAW): L1a QL -- 2024/9/2"
    ]
   },
   {
@@ -32,7 +32,9 @@
     "import matplotlib.colors as colors\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import sys"
+    "import sys\n",
+    "\n",
+    "from matplotlib import gridspec"
    ]
   },
   {
@@ -83,8 +85,8 @@
     "# *** Plot dump ***\n",
     "dump_mode = 0                           # 0: no-dump  1:plot dump\n",
     "# *** CAL ***\n",
-    "unit_mode = 4                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
-    "band_mode = 1                           # [Power]     0: sum     1: /Hz\n",
+    "unit_mode = 2                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
+    "band_mode = 0                           # [Power]     0: sum     1: /Hz\n",
     "cal_mode  = 2                           # [Power]     0: background     1: CAL     2: all\n",
     "# *** Unit ***\n",
     "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
@@ -457,24 +459,35 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0d2efb20",
+   "cell_type": "markdown",
+   "id": "4277d6ec",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "print(\"Peak   Eu:\", '{:.2e}'.format(np.amax(wave.Eu_i)), ' {:.2e}'.format(np.amax(wave.Eu_q)), wave.str)\n",
-    "print(\"Peak   Ev:\", '{:.2e}'.format(np.amax(wave.Ev_i)), ' {:.2e}'.format(np.amax(wave.Ev_q)), wave.str)\n",
-    "print(\"Peak   Ew:\", '{:.2e}'.format(np.amax(wave.Ew_i)), ' {:.2e}'.format(np.amax(wave.Ew_q)), wave.str)\n",
-    "peak_E = np.ravel(spec.EuEu[:][:]); peak_f = np.argmax(peak_E); print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, '  |  {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])), spec.str, ' {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])**.5), wave.str)\n",
-    "peak_E = np.ravel(spec.EvEv[:][:]); peak_f = np.argmax(peak_E); print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, '  |  {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])), spec.str, ' {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])**.5), wave.str)\n",
-    "peak_E = np.ravel(spec.EwEw[:][:]); peak_f = np.argmax(peak_E); print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, '  |  {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])), spec.str, ' {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])**.5), wave.str)"
+    "### NaN"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d8b0fea",
+   "id": "98d92986",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if gap_mode == 1:\n",
+    "    for i in range(n_time0-1):\n",
+    "        if data.scet[i+1]-data.scet[i] > 60:\n",
+    "            print(i, data.epoch[i], i+1, data.epoch[i+1])\n",
+    "            spec.EE[i]      = math.nan;                                                            spec.EE[i+1]      = math.nan\n",
+    "            spec.EuEu[i]    = math.nan;  spec.EvEv[i]    = math.nan;  spec.EwEw[i]    = math.nan;  spec.EuEu[i+1]    = math.nan;  spec.EvEv[i+1]    = math.nan;  spec.EwEw[i+1]    = math.nan\n",
+    "            spec.E_DoLuv[i] = math.nan;  spec.E_DoLvw[i] = math.nan;  spec.E_DoLwu[i] = math.nan;  spec.E_DoLuv[i+1] = math.nan;  spec.E_DoLvw[i+1] = math.nan;  spec.E_DoLwu[i+1] = math.nan\n",
+    "            spec.E_DoCuv[i] = math.nan;  spec.E_DoCvw[i] = math.nan;  spec.E_DoCwu[i] = math.nan;  spec.E_DoCuv[i+1] = math.nan;  spec.E_DoCvw[i+1] = math.nan;  spec.E_DoCwu[i+1] = math.nan\n",
+    "            spec.E_ANGuv[i] = math.nan;  spec.E_ANGvw[i] = math.nan;  spec.E_ANGwu[i] = math.nan;  spec.E_ANGuv[i+1] = math.nan;  spec.E_ANGvw[i+1] = math.nan;  spec.E_ANGwu[i+1] = math.nan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cc70648",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,23 +499,68 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0d2efb20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Peak   Eu:\", '{:.2e}'.format(np.amax(wave.Eu_i)), ' {:.2e}'.format(np.amax(wave.Eu_q)), wave.str)\n",
+    "print(\"Peak   Ev:\", '{:.2e}'.format(np.amax(wave.Ev_i)), ' {:.2e}'.format(np.amax(wave.Ev_q)), wave.str)\n",
+    "print(\"Peak   Ew:\", '{:.2e}'.format(np.amax(wave.Ew_i)), ' {:.2e}'.format(np.amax(wave.Ew_q)), wave.str)\n",
+    "peak_E = np.ravel(spec.EuEu[:][:]); peak_f = np.argmax(peak_E)\n",
+    "print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, '  |  {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])), spec.str, ' {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])**.5), wave.str)\n",
+    "peak_E = np.ravel(spec.EvEv[:][:]); peak_f = np.argmax(peak_E)\n",
+    "print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, '  |  {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])), spec.str, ' {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])**.5), wave.str)\n",
+    "peak_E = np.ravel(spec.EwEw[:][:]); peak_f = np.argmax(peak_E)\n",
+    "print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), spec.str, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str, '  |  {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])), spec.str, ' {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])**.5), wave.str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "71ca6cda",
    "metadata": {},
    "outputs": [],
    "source": [
     "n_sweep1 = 0;  n_sweep2 = n_time1//2;  n_sweep3 = n_time1-1\n",
     "print(f\"[First peak - {n_sweep1}]\")\n",
-    "peak_E = np.ravel(spec.EuEu[n_sweep1]); peak_f = np.argmax(peak_E); print(\"EuEu:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
-    "peak_E = np.ravel(spec.EvEv[n_sweep1]); peak_f = np.argmax(peak_E); print(\"EvEv:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
-    "peak_E = np.ravel(spec.EwEw[n_sweep1]); peak_f = np.argmax(peak_E); print(\"EwEw:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
+    "peak_E = np.ravel(spec.EuEu[n_sweep1]); peak_f = np.argmax(peak_E)\n",
+    "print(\"EuEu:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
+    "peak_E = np.ravel(spec.EvEv[n_sweep1]); peak_f = np.argmax(peak_E)\n",
+    "print(\"EvEv:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
+    "peak_E = np.ravel(spec.EwEw[n_sweep1]); peak_f = np.argmax(peak_E)\n",
+    "print(\"EwEw:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
     "print(f\"[Mid   peak - {n_sweep2}]\")\n",
-    "peak_E = np.ravel(spec.EuEu[n_sweep2]); peak_f = np.argmax(peak_E); print(\"EuEu:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
-    "peak_E = np.ravel(spec.EvEv[n_sweep2]); peak_f = np.argmax(peak_E); print(\"EvEv:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
-    "peak_E = np.ravel(spec.EwEw[n_sweep2]); peak_f = np.argmax(peak_E); print(\"EwEw:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
+    "peak_E = np.ravel(spec.EuEu[n_sweep2]); peak_f = np.argmax(peak_E)\n",
+    "print(\"EuEu:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
+    "peak_E = np.ravel(spec.EvEv[n_sweep2]); peak_f = np.argmax(peak_E)\n",
+    "print(\"EvEv:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
+    "peak_E = np.ravel(spec.EwEw[n_sweep2]); peak_f = np.argmax(peak_E)\n",
+    "print(\"EwEw:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
     "print(f\"[Last  peak - {n_sweep3}]\")\n",
-    "peak_E = np.ravel(spec.EuEu[n_sweep3]); peak_f = np.argmax(peak_E); print(\"EuEu:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
-    "peak_E = np.ravel(spec.EvEv[n_sweep3]); peak_f = np.argmax(peak_E); print(\"EvEv:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
-    "peak_E = np.ravel(spec.EwEw[n_sweep3]); peak_f = np.argmax(peak_E); print(\"EwEw:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))"
+    "peak_E = np.ravel(spec.EuEu[n_sweep3]); peak_f = np.argmax(peak_E)\n",
+    "print(\"EuEu:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
+    "peak_E = np.ravel(spec.EvEv[n_sweep3]); peak_f = np.argmax(peak_E)\n",
+    "print(\"EvEv:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
+    "peak_E = np.ravel(spec.EwEw[n_sweep3]); peak_f = np.argmax(peak_E)\n",
+    "print(\"EwEw:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "414c5983",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_sweep = n_time1//2;  peak_E = np.ravel(spec.EuEu[n_sweep]); peak_f = np.argmax(peak_E); \n",
+    "print(f\"[SWEEP - {n_sweep}]  Peak at\", '{:.1f}'.format(freq_1d[peak_f]), \"kHz\", peak_f)\n",
+    "print(\"      EuEu:\", '{:+.2e}'.format(np.ravel(spec.EuEu   [n_sweep])[peak_f]), spec.str, \"     EvEv:\", '{:+.2e}'.format(np.ravel(spec.EvEv   [n_sweep])[peak_f]), spec.str, \"   EwEw:\", '{:+.2e}'.format(np.ravel(spec.EwEw   [n_sweep])[peak_f]), spec.str)\n",
+    "print(\"   EuEv_re:\", '{:+.2e}'.format(np.ravel(spec.EuEv_re[n_sweep])[peak_f]), spec.str, \"  EuEv_im:\", '{:+.2e}'.format(np.ravel(spec.EuEv_im[n_sweep])[peak_f]), spec.str, \"  PHAuv:\", '{:+5.1f} deg'.format(np.ravel(spec.E_PHAuv[n_sweep])[peak_f]), \"  COHuv:\", '{:+4.2f}'.format(np.ravel(spec.E_COHuv[n_sweep])[peak_f]), \"  DoPuv:\", '{:+4.2f}'.format(np.ravel(spec.E_DoPuv[n_sweep])[peak_f]), \"  DoLuv:\", '{:+4.2f}'.format(np.ravel(spec.E_DoLuv[n_sweep])[peak_f]), \"  DoCuv:\", '{:+4.2f}'.format(np.ravel(spec.E_DoCuv[n_sweep])[peak_f]), \"  ANGuv:\", '{:+5.1f} deg'.format(np.ravel(spec.E_ANGuv[n_sweep])[peak_f]))\n",
+    "print(\"   EvEw_re:\", '{:+.2e}'.format(np.ravel(spec.EvEw_re[n_sweep])[peak_f]), spec.str, \"  EvEw_im:\", '{:+.2e}'.format(np.ravel(spec.EvEw_im[n_sweep])[peak_f]), spec.str, \"  PHAvw:\", '{:+5.1f} deg'.format(np.ravel(spec.E_PHAvw[n_sweep])[peak_f]), \"  COHvw:\", '{:+4.2f}'.format(np.ravel(spec.E_COHvw[n_sweep])[peak_f]), \"  DoPvw:\", '{:+4.2f}'.format(np.ravel(spec.E_DoPvw[n_sweep])[peak_f]), \"  DoLvw:\", '{:+4.2f}'.format(np.ravel(spec.E_DoLvw[n_sweep])[peak_f]), \"  DoCvw:\", '{:+4.2f}'.format(np.ravel(spec.E_DoCvw[n_sweep])[peak_f]), \"  ANGvw:\", '{:+5.1f} deg'.format(np.ravel(spec.E_ANGvw[n_sweep])[peak_f]))\n",
+    "print(\"   EwEu_re:\", '{:+.2e}'.format(np.ravel(spec.EwEu_re[n_sweep])[peak_f]), spec.str, \"  EwEu_im:\", '{:+.2e}'.format(np.ravel(spec.EwEu_im[n_sweep])[peak_f]), spec.str, \"  PHAwu:\", '{:+5.1f} deg'.format(np.ravel(spec.E_PHAwu[n_sweep])[peak_f]), \"  COHqu:\", '{:+4.2f}'.format(np.ravel(spec.E_COHwu[n_sweep])[peak_f]), \"  DoPwu:\", '{:+4.2f}'.format(np.ravel(spec.E_DoPwu[n_sweep])[peak_f]), \"  DoLwu:\", '{:+4.2f}'.format(np.ravel(spec.E_DoLwu[n_sweep])[peak_f]), \"  DoCwu:\", '{:+4.2f}'.format(np.ravel(spec.E_DoCwu[n_sweep])[peak_f]), \"  ANGwu:\", '{:+5.1f} deg'.format(np.ravel(spec.E_ANGwu[n_sweep])[peak_f]))\n",
+    "print('Stokes-UV: {:+.2e}'.format(np.ravel(spec.E_Iuv[n_sweep])[peak_f]),   '{:+.2e}'.format(np.ravel(spec.E_Quv[n_sweep])[peak_f]),   '{:+.2e}'.format(np.ravel(spec.E_Uuv[n_sweep])[peak_f]),   '{:+.2e}'.format(np.ravel(spec.E_Vuv[n_sweep])[peak_f]))\n",
+    "print('Stokes-VW: {:+.2e}'.format(np.ravel(spec.E_Ivw[n_sweep])[peak_f]),   '{:+.2e}'.format(np.ravel(spec.E_Qvw[n_sweep])[peak_f]),   '{:+.2e}'.format(np.ravel(spec.E_Uvw[n_sweep])[peak_f]),   '{:+.2e}'.format(np.ravel(spec.E_Vvw[n_sweep])[peak_f]))\n",
+    "print('Stokes-WU: {:+.2e}'.format(np.ravel(spec.E_Iwu[n_sweep])[peak_f]),   '{:+.2e}'.format(np.ravel(spec.E_Qwu[n_sweep])[peak_f]),   '{:+.2e}'.format(np.ravel(spec.E_Uwu[n_sweep])[peak_f]),   '{:+.2e}'.format(np.ravel(spec.E_Vwu[n_sweep])[peak_f]))"
    ]
   },
   {
@@ -549,17 +607,7 @@
    "id": "f4283fe8",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "n_sweep = n_time1//2;  peak_E = np.ravel(spec.EuEu[n_sweep]); peak_f = np.argmax(peak_E); \n",
-    "print(f\"[SWEEP - {n_sweep}]  Peak at\", '{:.1f}'.format(freq_1d[peak_f]), \"kHz\", peak_f)\n",
-    "print(\"      EuEu:\", '{:+.2e}'.format(np.ravel(spec.EuEu   [n_sweep])[peak_f]), spec.str, \"     EvEv:\", '{:+.2e}'.format(np.ravel(spec.EvEv   [n_sweep])[peak_f]), spec.str, \"   EwEw:\", '{:+.2e}'.format(np.ravel(spec.EwEw   [n_sweep])[peak_f]), spec.str)\n",
-    "print(\"   EuEv_re:\", '{:+.2e}'.format(np.ravel(spec.EuEv_re[n_sweep])[peak_f]), spec.str, \"  EuEv_im:\", '{:+.2e}'.format(np.ravel(spec.EuEv_im[n_sweep])[peak_f]), spec.str, \"  PHAuv:\", '{:+5.1f} deg'.format(np.ravel(spec.E_PHAuv[n_sweep])[peak_f]), \"  COHuv:\", '{:+4.2f}'.format(np.ravel(spec.E_COHuv[n_sweep])[peak_f]), \"  DoPuv:\", '{:+4.2f}'.format(np.ravel(spec.E_DoPuv[n_sweep])[peak_f]), \"  DoLuv:\", '{:+4.2f}'.format(np.ravel(spec.E_DoLuv[n_sweep])[peak_f]), \"  DoCuv:\", '{:+4.2f}'.format(np.ravel(spec.E_DoCuv[n_sweep])[peak_f]), \"  ANGuv:\", '{:+5.1f} deg'.format(np.ravel(spec.E_ANGuv[n_sweep])[peak_f]))\n",
-    "print(\"   EvEw_re:\", '{:+.2e}'.format(np.ravel(spec.EvEw_re[n_sweep])[peak_f]), spec.str, \"  EvEw_im:\", '{:+.2e}'.format(np.ravel(spec.EvEw_im[n_sweep])[peak_f]), spec.str, \"  PHAvw:\", '{:+5.1f} deg'.format(np.ravel(spec.E_PHAvw[n_sweep])[peak_f]), \"  COHvw:\", '{:+4.2f}'.format(np.ravel(spec.E_COHvw[n_sweep])[peak_f]), \"  DoPvw:\", '{:+4.2f}'.format(np.ravel(spec.E_DoPvw[n_sweep])[peak_f]), \"  DoLvw:\", '{:+4.2f}'.format(np.ravel(spec.E_DoLvw[n_sweep])[peak_f]), \"  DoCvw:\", '{:+4.2f}'.format(np.ravel(spec.E_DoCvw[n_sweep])[peak_f]), \"  ANGvw:\", '{:+5.1f} deg'.format(np.ravel(spec.E_ANGvw[n_sweep])[peak_f]))\n",
-    "print(\"   EwEu_re:\", '{:+.2e}'.format(np.ravel(spec.EwEu_re[n_sweep])[peak_f]), spec.str, \"  EwEu_im:\", '{:+.2e}'.format(np.ravel(spec.EwEu_im[n_sweep])[peak_f]), spec.str, \"  PHAwu:\", '{:+5.1f} deg'.format(np.ravel(spec.E_PHAwu[n_sweep])[peak_f]), \"  COHqu:\", '{:+4.2f}'.format(np.ravel(spec.E_COHwu[n_sweep])[peak_f]), \"  DoPwu:\", '{:+4.2f}'.format(np.ravel(spec.E_DoPwu[n_sweep])[peak_f]), \"  DoLwu:\", '{:+4.2f}'.format(np.ravel(spec.E_DoLwu[n_sweep])[peak_f]), \"  DoCwu:\", '{:+4.2f}'.format(np.ravel(spec.E_DoCwu[n_sweep])[peak_f]), \"  ANGwu:\", '{:+5.1f} deg'.format(np.ravel(spec.E_ANGwu[n_sweep])[peak_f]))\n",
-    "# print('Stockes-UV: {:+.2e}'.format(np.ravel(spec.E_Iuv[n_sweep])[peak_f]),   '{:+.2e}'.format(np.ravel(spec.E_Quv[n_sweep])[peak_f]),   '{:+.2e}'.format(np.ravel(spec.E_Uuv[n_sweep])[peak_f]),   '{:+.2e}'.format(np.ravel(spec.E_Vuv[n_sweep])[peak_f]))\n",
-    "# print('Stockes-VW: {:+.2e}'.format(np.ravel(spec.E_Ivw[n_sweep])[peak_f]),   '{:+.2e}'.format(np.ravel(spec.E_Qvw[n_sweep])[peak_f]),   '{:+.2e}'.format(np.ravel(spec.E_Uvw[n_sweep])[peak_f]),   '{:+.2e}'.format(np.ravel(spec.E_Vvw[n_sweep])[peak_f]))\n",
-    "# print('Stockes-WU: {:+.2e}'.format(np.ravel(spec.E_Iwu[n_sweep])[peak_f]),   '{:+.2e}'.format(np.ravel(spec.E_Qwu[n_sweep])[peak_f]),   '{:+.2e}'.format(np.ravel(spec.E_Uwu[n_sweep])[peak_f]),   '{:+.2e}'.format(np.ravel(spec.E_Vwu[n_sweep])[peak_f]))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -701,17 +749,7 @@
    "id": "89979028",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "if gap_mode == 1:\n",
-    "    for i in range(n_time0-1):\n",
-    "        if data.scet[i+1]-data.scet[i] > 60:\n",
-    "            print(i, data.epoch[i], i+1, data.epoch[i+1])\n",
-    "            spec.EE[i]      = math.nan;                                                            spec.EE[i+1]      = math.nan\n",
-    "            spec.EuEu[i]    = math.nan;  spec.EvEv[i]    = math.nan;  spec.EwEw[i]    = math.nan;  spec.EuEu[i+1]    = math.nan;  spec.EvEv[i+1]    = math.nan;  spec.EwEw[i+1]    = math.nan\n",
-    "            spec.E_DoLuv[i] = math.nan;  spec.E_DoLvw[i] = math.nan;  spec.E_DoLwu[i] = math.nan;  spec.E_DoLuv[i+1] = math.nan;  spec.E_DoLvw[i+1] = math.nan;  spec.E_DoLwu[i+1] = math.nan\n",
-    "            spec.E_DoCuv[i] = math.nan;  spec.E_DoCvw[i] = math.nan;  spec.E_DoCwu[i] = math.nan;  spec.E_DoCuv[i+1] = math.nan;  spec.E_DoCvw[i+1] = math.nan;  spec.E_DoCwu[i+1] = math.nan\n",
-    "            spec.E_ANGuv[i] = math.nan;  spec.E_ANGvw[i] = math.nan;  spec.E_ANGwu[i] = math.nan;  spec.E_ANGuv[i+1] = math.nan;  spec.E_ANGvw[i+1] = math.nan;  spec.E_ANGwu[i+1] = math.nan"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1130,9 +1168,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sid3_sim = 0\n",
-    "sid4_sim = 0\n",
-    "sid5_sim = 0"
+    "sid3_sim = 1\n",
+    "sid4_sim = 1\n",
+    "sid5_sim = 1"
    ]
   },
   {
